--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,9 @@ repos:
         args: ["run", "lint-check"]
         language: system
         types: [python]
+      - id: hatch-lint-test
+        name: Hatch Test
+        entry: hatch
+        args: ["run", "test"]
+        language: system
+        types: [python]
