--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ extend-select = ["I", "TRY", "UP"]
 [tool.pytest.ini_options]
 addopts = "--cov=imxInsights --cov-report=term-missing --ignore=test_build.py"
 asyncio_mode = "strict"
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "serial",
+]
 
 [tool.hatch]
 
