--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ dependencies = [
     "types-shapely",
     "pyproj",
     "pandas",
+    "pandas-stubs",
     "xlsxwriter",
     "networkx",
     "dateparser",
